bee-common-derive/tests/packable/union.stderr
error: Unions cannot derive `Packable`
 --> $DIR/union.rs:9:11
  |
9 | pub union MaybeInt {
  |           ^^^^^^^^
